vezba8domaci/zadatak1/micko.output
Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 global_list: %empty
    3            | global_list global_var

    4 global_var: type _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 $@2: %empty

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

   10 type: _TYPE

   11 parameter: %empty
   12          | type _ID

   13 $@3: %empty

   14 body: _LBRACKET variable_list $@3 statement_list _RBRACKET

   15 variable_list: %empty
   16              | variable_list variable

   17 variable: type _ID _SEMICOLON
   18         | type _ID _ASSIGN exp _SEMICOLON

   19 statement_list: %empty
   20               | statement_list statement

   21 statement: compound_statement
   22          | assignment_statement
   23          | if_statement
   24          | return_statement

   25 compound_statement: _LBRACKET statement_list _RBRACKET

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   27 num_exp: exp
   28        | num_exp _AROP exp

   29 exp: literal
   30    | _ID
   31    | function_call
   32    | _LPAREN num_exp _RPAREN

   33 literal: _INT_NUMBER
   34        | _UINT_NUMBER

   35 $@4: %empty

   36 function_call: _ID $@4 _LPAREN argument _RPAREN

   37 argument: %empty
   38         | num_exp

   39 if_statement: if_part
   40             | if_part _ELSE statement

   41 @5: %empty

   42 $@6: %empty

   43 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement

   44 rel_exp: num_exp _RELOP num_exp

   45 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 10
_IF (259) 43
_ELSE (260) 40
_RETURN (261) 45
_ID (262) 4 9 12 17 18 26 30 36
_INT_NUMBER (263) 33
_UINT_NUMBER (264) 34
_LPAREN (265) 9 32 36 43
_RPAREN (266) 9 32 36 43
_LBRACKET (267) 14 25
_RBRACKET (268) 14 25
_ASSIGN (269) 18 26
_SEMICOLON (270) 4 17 18 26 45
_AROP (271) 28
_RELOP (272) 44
ONLY_IF (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
global_list (21)
    on left: 2 3, on right: 1 3
global_var (22)
    on left: 4, on right: 3
function_list (23)
    on left: 5 6, on right: 1 6
function (24)
    on left: 9, on right: 5 6
$@1 (25)
    on left: 7, on right: 9
$@2 (26)
    on left: 8, on right: 9
type (27)
    on left: 10, on right: 4 9 12 17 18
parameter (28)
    on left: 11 12, on right: 9
body (29)
    on left: 14, on right: 9
$@3 (30)
    on left: 13, on right: 14
variable_list (31)
    on left: 15 16, on right: 14 16
variable (32)
    on left: 17 18, on right: 16
statement_list (33)
    on left: 19 20, on right: 14 20 25
statement (34)
    on left: 21 22 23 24, on right: 20 40 43
compound_statement (35)
    on left: 25, on right: 21
assignment_statement (36)
    on left: 26, on right: 22
num_exp (37)
    on left: 27 28, on right: 26 28 32 38 44 45
exp (38)
    on left: 29 30 31 32, on right: 18 27 28
literal (39)
    on left: 33 34, on right: 29
function_call (40)
    on left: 36, on right: 31
$@4 (41)
    on left: 35, on right: 36
argument (42)
    on left: 37 38, on right: 36
if_statement (43)
    on left: 39 40, on right: 23
if_part (44)
    on left: 43, on right: 39 40
@5 (45)
    on left: 41, on right: 43
$@6 (46)
    on left: 42, on right: 43
rel_exp (47)
    on left: 44, on right: 43
return_statement (48)
    on left: 45, on right: 24


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_list . function_list
    3 global_list: global_list . global_var

    _TYPE  shift, and go to state 4

    global_var     go to state 5
    function_list  go to state 6
    function       go to state 7
    type           go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 type: _TYPE .

    $default  reduce using rule 10 (type)


State 5

    3 global_list: global_list global_var .

    $default  reduce using rule 3 (global_list)


State 6

    1 program: global_list function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 9
    type      go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 global_var: type . _ID _SEMICOLON
    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 11


State 9

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 10

    9 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 12


State 11

    4 global_var: type _ID . _SEMICOLON
    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    _SEMICOLON  shift, and go to state 13

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 12

    9 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 14


State 13

    4 global_var: type _ID _SEMICOLON .

    $default  reduce using rule 4 (global_var)


State 14

    9 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 15


State 15

    9 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 4

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 17


State 16

   12 parameter: type . _ID

    _ID  shift, and go to state 18


State 17

    9 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 19


State 18

   12 parameter: type _ID .

    $default  reduce using rule 12 (parameter)


State 19

    9 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 8 ($@2)

    $@2  go to state 20


State 20

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 21

    body  go to state 22


State 21

   14 body: _LBRACKET . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 15 (variable_list)

    variable_list  go to state 23


State 22

    9 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 9 (function)


State 23

   14 body: _LBRACKET variable_list . $@3 statement_list _RBRACKET
   16 variable_list: variable_list . variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 13 ($@3)

    type      go to state 24
    $@3       go to state 25
    variable  go to state 26


State 24

   17 variable: type . _ID _SEMICOLON
   18         | type . _ID _ASSIGN exp _SEMICOLON

    _ID  shift, and go to state 27


State 25

   14 body: _LBRACKET variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 28


State 26

   16 variable_list: variable_list variable .

    $default  reduce using rule 16 (variable_list)


State 27

   17 variable: type _ID . _SEMICOLON
   18         | type _ID . _ASSIGN exp _SEMICOLON

    _ASSIGN     shift, and go to state 29
    _SEMICOLON  shift, and go to state 30


State 28

   14 body: _LBRACKET variable_list $@3 statement_list . _RBRACKET
   20 statement_list: statement_list . statement

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34
    _RBRACKET  shift, and go to state 35

    statement             go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 29

   18 variable: type _ID _ASSIGN . exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    exp            go to state 46
    literal        go to state 47
    function_call  go to state 48


State 30

   17 variable: type _ID _SEMICOLON .

    $default  reduce using rule 17 (variable)


State 31

   43 if_part: _IF . _LPAREN @5 rel_exp $@6 _RPAREN statement

    _LPAREN  shift, and go to state 49


State 32

   45 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 50
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48


State 33

   26 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 52


State 34

   25 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 53


State 35

   14 body: _LBRACKET variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 14 (body)


State 36

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 37

   21 statement: compound_statement .

    $default  reduce using rule 21 (statement)


State 38

   22 statement: assignment_statement .

    $default  reduce using rule 22 (statement)


State 39

   23 statement: if_statement .

    $default  reduce using rule 23 (statement)


State 40

   39 if_statement: if_part .
   40             | if_part . _ELSE statement

    _ELSE  shift, and go to state 54

    $default  reduce using rule 39 (if_statement)


State 41

   24 statement: return_statement .

    $default  reduce using rule 24 (statement)


State 42

   30 exp: _ID .
   36 function_call: _ID . $@4 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 35 ($@4)
    $default  reduce using rule 30 (exp)

    $@4  go to state 55


State 43

   33 literal: _INT_NUMBER .

    $default  reduce using rule 33 (literal)


State 44

   34 literal: _UINT_NUMBER .

    $default  reduce using rule 34 (literal)


State 45

   32 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 56
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48


State 46

   18 variable: type _ID _ASSIGN exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 57


State 47

   29 exp: literal .

    $default  reduce using rule 29 (exp)


State 48

   31 exp: function_call .

    $default  reduce using rule 31 (exp)


State 49

   43 if_part: _IF _LPAREN . @5 rel_exp $@6 _RPAREN statement

    $default  reduce using rule 41 (@5)

    @5  go to state 58


State 50

   28 num_exp: num_exp . _AROP exp
   45 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 59
    _AROP       shift, and go to state 60


State 51

   27 num_exp: exp .

    $default  reduce using rule 27 (num_exp)


State 52

   26 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 61
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48


State 53

   20 statement_list: statement_list . statement
   25 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34
    _RBRACKET  shift, and go to state 62

    statement             go to state 36
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 54

   40 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34

    statement             go to state 63
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 55

   36 function_call: _ID $@4 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 64


State 56

   28 num_exp: num_exp . _AROP exp
   32 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 65
    _AROP    shift, and go to state 60


State 57

   18 variable: type _ID _ASSIGN exp _SEMICOLON .

    $default  reduce using rule 18 (variable)


State 58

   43 if_part: _IF _LPAREN @5 . rel_exp $@6 _RPAREN statement

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 66
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48
    rel_exp        go to state 67


State 59

   45 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 60

   28 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    exp            go to state 68
    literal        go to state 47
    function_call  go to state 48


State 61

   26 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   28 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 69
    _AROP       shift, and go to state 60


State 62

   25 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 25 (compound_statement)


State 63

   40 if_statement: if_part _ELSE statement .

    $default  reduce using rule 40 (if_statement)


State 64

   36 function_call: _ID $@4 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    $default  reduce using rule 37 (argument)

    num_exp        go to state 70
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48
    argument       go to state 71


State 65

   32 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 32 (exp)


State 66

   28 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 60
    _RELOP  shift, and go to state 72


State 67

   43 if_part: _IF _LPAREN @5 rel_exp . $@6 _RPAREN statement

    $default  reduce using rule 42 ($@6)

    $@6  go to state 73


State 68

   28 num_exp: num_exp _AROP exp .

    $default  reduce using rule 28 (num_exp)


State 69

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 26 (assignment_statement)


State 70

   28 num_exp: num_exp . _AROP exp
   38 argument: num_exp .

    _AROP  shift, and go to state 60

    $default  reduce using rule 38 (argument)


State 71

   36 function_call: _ID $@4 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 74


State 72

   44 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 75
    exp            go to state 51
    literal        go to state 47
    function_call  go to state 48


State 73

   43 if_part: _IF _LPAREN @5 rel_exp $@6 . _RPAREN statement

    _RPAREN  shift, and go to state 76


State 74

   36 function_call: _ID $@4 _LPAREN argument _RPAREN .

    $default  reduce using rule 36 (function_call)


State 75

   28 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 60

    $default  reduce using rule 44 (rel_exp)


State 76

   43 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN . statement

    _IF        shift, and go to state 31
    _RETURN    shift, and go to state 32
    _ID        shift, and go to state 33
    _LBRACKET  shift, and go to state 34

    statement             go to state 77
    compound_statement    go to state 37
    assignment_statement  go to state 38
    if_statement          go to state 39
    if_part               go to state 40
    return_statement      go to state 41


State 77

   43 if_part: _IF _LPAREN @5 rel_exp $@6 _RPAREN statement .

    $default  reduce using rule 43 (if_part)
